# Haze

./: README.md  pyproject.toml
src/haze/: server.py
src/haze/static/: chart-airquality.js  chart-aqicomponents.js  chart-humidity.js  chart-precipitation.js  chart-skycon.js  chart-temperature.js  global.js  location.js  main.js  style.css  util.js  weather.js
src/haze/templates/: index.html
